# shashi

nrf/boards/shields/nrf21540_ek/: nrf21540_ek.overlay
nrf/include/bluetooth/services/: nus.h
nrf/samples/bluetooth/peripheral_uart/: CMakeLists.txt  app.overlay  prj.conf
nrf/samples/bluetooth/peripheral_uart/src/: fstorage.c  fstorage.h  led.c  led.h  main.c  temp_sensor.c  temp_sensor.h  timers.c  timers.h
nrf/subsys/bluetooth/services/: nus.c
nrf/tests/modules/mcuboot/external_flash/: prj.conf
nrfxlib/zboss/development/include/osif/: zb_revision_r22.h  zb_transceiver.h
nrfxlib/zboss/production/include/osif/: zb_revision_r22.h
zephyr/boards/arm/nrf52833dk_nrf52833/: nrf52833dk_nrf52833-pinctrl.dtsi  nrf52833dk_nrf52833.dts
zephyr/include/zephyr/bluetooth/: gap.h
